# data-time-segment

./: LICENSE  README.md  data-time-segment.cabal
src/Data/Time/: Segment.hs
src/Data/Time/Segment/: Granularity.hs  Main.hs
